src/snapshots/ashley__lang__tests__empty function.snap
---
source: src/lang.rs
expression: "parse_source_text_to_syntax(r#\"\nfn main() {\n}\n\"#)"
---
ROOT@0..15
  WHITESPACE@0..1 "\n"
  FUNCTION@1..14
    FN_KW@1..3 "fn"
    WHITESPACE@3..4 " "
    IDENT@4..8 "main"
    ARG_LIST@8..10
      L_PAREN@8..9 "("
      R_PAREN@9..10 ")"
    WHITESPACE@10..11 " "
    BLOCK@11..14
      L_BRACE@11..12 "{"
      WHITESPACE@12..13 "\n"
      R_BRACE@13..14 "}"
  WHITESPACE@14..15 "\n"

