src/snapshots/ashley__lang__tests__empty functions with arguments.snap
---
source: src/lang.rs
expression: "parse_source_text_to_syntax(r#\"\nfn zero_arg() {}\nfn one_arg(a : i32) {}\nfn two_args(a : f32, b: f32) {}\n\"#)"
---
ROOT@0..73
  WHITESPACE@0..1 "\n"
  FUNCTION@1..17
    FN_KW@1..3 "fn"
    WHITESPACE@3..4 " "
    IDENT@4..12 "zero_arg"
    ARG_LIST@12..14
      L_PAREN@12..13 "("
      R_PAREN@13..14 ")"
    WHITESPACE@14..15 " "
    BLOCK@15..17
      L_BRACE@15..16 "{"
      R_BRACE@16..17 "}"
  WHITESPACE@17..18 "\n"
  FUNCTION@18..40
    FN_KW@18..20 "fn"
    WHITESPACE@20..21 " "
    IDENT@21..28 "one_arg"
    ARG_LIST@28..38
      L_PAREN@28..29 "("
      FN_ARG@29..36
        IDENT@29..30 "a"
        WHITESPACE@30..31 " "
        COLON@31..32 ":"
        WHITESPACE@32..33 " "
        TYPE_REF@33..36
          IDENT@33..36 "i32"
      R_PAREN@36..37 ")"
      WHITESPACE@37..38 " "
    BLOCK@38..40
      L_BRACE@38..39 "{"
      R_BRACE@39..40 "}"
  WHITESPACE@40..41 "\n"
  FUNCTION@41..72
    FN_KW@41..43 "fn"
    WHITESPACE@43..44 " "
    IDENT@44..52 "two_args"
    ARG_LIST@52..70
      L_PAREN@52..53 "("
      FN_ARG@53..60
        IDENT@53..54 "a"
        WHITESPACE@54..55 " "
        COLON@55..56 ":"
        WHITESPACE@56..57 " "
        TYPE_REF@57..60
          IDENT@57..60 "f32"
      COMMA@60..61 ","
      WHITESPACE@61..62 " "
      FN_ARG@62..68
        IDENT@62..63 "b"
        COLON@63..64 ":"
        WHITESPACE@64..65 " "
        TYPE_REF@65..68
          IDENT@65..68 "f32"
      R_PAREN@68..69 ")"
      WHITESPACE@69..70 " "
    BLOCK@70..72
      L_BRACE@70..71 "{"
      R_BRACE@71..72 "}"
  WHITESPACE@72..73 "\n"

